:bug: min spacing for social cards

--- a/workspaces/website/src/styles/global.css
+++ b/workspaces/website/src/styles/global.css
@@ -188,8 +188,10 @@ ul.social-cards {
   gap: .5em;
   list-style-type: none;
 }
-ul.social-cards:has(li:nth-of-type(2):last-child) li {
-  width: calc(100% / 2 - .5em);
+@media (min-width: 600px) {
+  ul.social-cards:has(li:nth-of-type(2):last-child) li {
+    width: calc(100% / 2 - .5em);
+  }
 }
 /* dl.social-cards:has(dd:nth-of-type(3):last-child) dd {
   width: calc(100% / 3 - .5em);
